--- a/src/components/sections/ByNumber.astro
+++ b/src/components/sections/ByNumber.astro
@@ -11,36 +11,40 @@ import Container from "../shared/Container.astro";
         <h2
           class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1"
         >
-          12+
+        🌍 12+
         </h2>
-        <p class="mt-2 text-heading-3">Created projects</p>
+        <p class="mt-2 text-heading-3">Países conectados
+        </p>
       </div>
 
       <div class="text-center">
         <h2
           class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1"
         >
-          200+
+        💼 200+
         </h2>
-        <p class="mt-2 text-heading-3">Projects</p>
+        <p class="mt-2 text-heading-3">Vagas ativas
+        </p>
       </div>
 
       <div class="text-center">
         <h2
           class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1"
         >
-          120
+        👥120
         </h2>
-        <p class="mt-2 text-heading-3">Happy Client</p>
+        <p class="mt-2 text-heading-3">Comunidade ativa
+        </p>
       </div>
 
       <div class="text-center">
         <h2
           class="font-semibold text-xl sm:text-2xl md:text-4xl text-heading-1"
         >
-          5+
+        🕒5+
         </h2>
-        <p class="mt-2 text-heading-3">Years</p>
+        <p class="mt-2 text-heading-3">Anos de experiência
+        </p>
       </div>
     </div>
   </Container>
