--- a/src/components/sections/Features.astro
+++ b/src/components/sections/Features.astro
@@ -6,7 +6,7 @@ import Title from "../shared/Title.astro";
 ---
 
 <section id="features">
-    <Container className="flex flex-col midmd:flex-row gap-10 lg:gap-12">
+   <!--  <Container className="flex flex-col midmd:flex-row gap-10 lg:gap-12">
         
         <div class="flex-1 flex midmd:w-7/12 lg:w-1/2 flex-col">
             <Title>
@@ -47,5 +47,5 @@ import Title from "../shared/Title.astro";
                 class=" w-auto left-1/2 -translate-x-1/2 absolute bottom-0 max-h-full" />
             </div>
         </div>
-    </Container>
+    </Container> -->
 </section>
