--- a/src/components/sections/Brands.astro
+++ b/src/components/sections/Brands.astro
@@ -5,7 +5,7 @@ import Title from "../shared/Title.astro";
 ---
 
 <section>
-    <Container className="space-y-8">
+    <!-- <Container className="space-y-8">
         <div class="text-center max-w-3xl mx-auto">
             <Title>
                 Trusted by companies like
@@ -49,5 +49,5 @@ import Title from "../shared/Title.astro";
                 <img src="/logos/paypallogo.png" width="100" height="60" alt="paypal" class="h-7 sm:h-10 w-auto ease-linear duration-300 grayscale group-hover:!grayscale-0 group-hover:scale-105">
             </div>
         </div>
-    </Container>
+    </Container> -->
 </section>
