--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -18,7 +18,7 @@ import ByNumber from "./ByNumber.astro";
             
             <h1 class="text-3xl/tight sm:text-4xl/tight md:text-5xl/tight xl:text-6xl/tight
              font-bold text-heading-1">
-             Trabalhar  <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600">em casa</span> e mais facíl que você imagina.
+             Trabalhar  <span class="text-transparent bg-clip-text bg-gradient-to-br from-indigo-600 from-20% via-primary via-30% to-green-600">em casa</span> e mais fácil que você imagina.
             </h1>
             <Paragraph className="mt-8">
                 Acesse vagas globais, dicas de carreira e ferramentas para dominar o trabalho remoto
