--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,6 +22,17 @@ const { title } = Astro.props;
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+<!-- Google tag (gtag.js) -->
+<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-GYSVJSD82K"></script>
+<script type="text/partytown">
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GYSVJSD82K');
+</script>
+
+
   </head>
   <body class="overflow-hidden overflow-y-auto bg-body">
     <Navbar />
